pv#110021 - fix tags wrapping

--- a/css/surcharge.css
+++ b/css/surcharge.css
@@ -6948,7 +6948,7 @@ table.table1 td::after {
 .detail-secteur ul.detail-secteur__datas > li p .nth-line .line {
   position: relative;
   z-index: 1;
-  display: inline-block;
+  display: block;
 }
 
 .detail-secteur ul.detail-secteur__datas > li p .nth-line .line::before {
